<resources>
    <string name="app_name">Wheels</string>
    <string name="title_search">Search</string>
    <string name="title_activity">Activity</string>
    <string name="title_account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_login_capital">LOG IN</string>
    <string name="text_signup_capital">SIGN UP</string>
    <string name="text_emailadress">Email address</string>
    <string name="text_password">Password</string>
    <string name="text_forgotpassword">Forgot password?</string>
    <string name="title_onboarding">Onboarding</string>
    <string name="text_vehicle_primary_name">%1$s %2$s</string>
    <string name="text_currency_price_short">MYR %1$s</string>
    <string name="text_checkout_total_singular">MYR %1$s (%2$s day)</string>
    <string name="text_checkout_total_plural">MYR %1$s (%2$s days)</string>
    <string name="text_per_day">per day</string>
    <string name="text_placeholder_location">Bukit Damansara, Kuala Lumpur</string>
    <string name="text_placeholder_price">MYR 300</string>
    <string name="text_placeholder_vehicle_primary_name">Perodua Bezza</string>
    <string name="text_description_car_image">Car Image</string>
    <string name="text_view_results">View Results</string>
    <string name="text_title_filter">Filter</string>
    <string name="title_trip_history">Trip History</string>
    <string name="title_account_history">Account History</string>
    <string name="text_login_or_signup">Login or Sign Up</string>
    <string name="placeholder_full_name">Full name</string>
    <string name="placeholder_email">username@email.com</string>
    <string name="text_logout">Log Out</string>
    <string name="text_login">Login</string>
    <string name="text_profile">Profile</string>
    <string name="text_delete_profile">Delete Profile</string>
    <string name="text_account">Account</string>
    <string name="text_activities">Activities</string>
    <string name="text_search">Search</string>
    <string name="text_filter">Filter</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_vehicle_detail">Vehicle Detail</string>
    <string name="text_payment">Payment</string>
    <string name="text_proceed">PROCEED</string>
    <string name="text_vehicle_rating">%s★ (%s trips)</string>
    <string name="text_vehicle_type_sedan">Sedan</string>
    <string name="text_vehicle_type_hatchback">Hatchback</string>
    <string name="text_vehicle_type_suv">SUV</string>
    <string name="text_vehicle_type_van">VAN</string>
    <string name="text_vehicle_type_pickup">Pickup</string>
    <string name="text_vehicle_type_jeep">Jeep</string>
    <string name="text_vehicle_number_seat">%d seats</string>
    <string name="text_vehicle_transmission_at">AT</string>
    <string name="text_vehicle_transmission_mt">MT</string>
    <string name="text_vehicle_mpg">%d MPG</string>
    <string name="text_selecte_date_first">Select date first</string>
    <string name="text_trip_id">Trip ID: %s</string>
    <string name="text_trip_booked_on">Trip booked on %s</string>


    <string name="text_filter_all_types">All Types</string>
    <string name="text_filter_all_brands">All Brands</string>
    <string name="text_filter_all_transmissions">All Transmissions</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_delete_my_account">DELETE MY ACCOUNT</string>
    <string name="text_account_created">Account created</string>
    <string name="text_profile_updated">Profile updated</string>
    <string name="text_password_changed">Password changed</string>
    <string name="text_account_deleted">Account deleted</string>

</resources>
